syntax = "proto3";

import "google/protobuf/timestamp.proto";

package rpc;

service Mensch {
  rpc Status(StatusRequest) returns (StatusResponse);
  rpc Init(InitRequest)     returns (InitResponse);
  rpc Start(StartRequest)   returns (StartResponse);
  rpc Stop(StopRequest)     returns (StopResponse);
  rpc Modify(ModifyRequest) returns (ModifyResponse);
}

enum Status {
  UNKNOWN       = 0;
  UNINITIALIZED = 1;
  INITIALIZED   = 2;
  RUNNING       = 3;
}

message StatusRequest {}

message StatusResponse {
  Status   status   = 1;
  string   token    = 2;
  int64    maxQPS   = 3;
  Workload workload = 4;
}

message InitRequest {
  string   token      = 1;
  Workload workload   = 2;
  bool     force      = 3;
  string   targetZone = 4;
  string   targetEnv  = 5;
}

message InitResponse {
}

message ModifyRequest {
  Workload workload = 1;
}

message ModifyResponse {
}

message StartRequest {
}

message StartResponse {
}

message StopRequest {
}

message StopResponse{
}

message Workload {
  google.protobuf.Timestamp baseTime     = 1;
  string                    metricPrefix = 2;
  string                    namespace    = 3;
  int32                     cardinality  = 4;
  int32                     ingressQPS   = 5;
}

